finish all features
