# NavyRadar.Backend/Controller/AccountsController.cs
@@ -14,9 +14,9 @@ public class AccountsController(IAccountService accountService) : ControllerBase
 {
     [HttpGet]
     [Authorize(Roles = "Admin")]
+    [ProducesResponseType(typeof(IEnumerable<AccountBase>), StatusCodes.Status200OK)]
     [ProducesResponseType(StatusCodes.Status401Unauthorized)]
     [ProducesResponseType(StatusCodes.Status403Forbidden)]
-    [ProducesResponseType(typeof(IEnumerable<Account>), StatusCodes.Status200OK)]
     public async Task<IActionResult> GetAllAccounts()
     {
         var accounts = await accountService.GetAllAsync();
@@ -25,7 +25,7 @@ public class AccountsController(IAccountService accountService) : ControllerBase
 
     [HttpGet("{id:int}")]
     [Authorize(Roles = "Admin")]
-    [ProducesResponseType(typeof(Account), StatusCodes.Status200OK)]
+    [ProducesResponseType(typeof(AccountBase), StatusCodes.Status200OK)]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
     [ProducesResponseType(StatusCodes.Status401Unauthorized)]
     [ProducesResponseType(StatusCodes.Status403Forbidden)]
@@ -42,11 +42,11 @@ public class AccountsController(IAccountService accountService) : ControllerBase
 
     [HttpPost]
     [Authorize(Roles = "Admin")]
+    [ProducesResponseType(typeof(AccountBase), StatusCodes.Status201Created)]
     [ProducesResponseType(StatusCodes.Status401Unauthorized)]
     [ProducesResponseType(StatusCodes.Status403Forbidden)]
-    [ProducesResponseType(typeof(Account), StatusCodes.Status201Created)]
     [ProducesResponseType(StatusCodes.Status400BadRequest)]
-    public async Task<IActionResult> CreateAccount([FromBody] Account account)
+    public async Task<IActionResult> CreateAccount([FromBody] AccountPassword account)
     {
         if (!ModelState.IsValid)
         {
@@ -64,7 +64,7 @@ public class AccountsController(IAccountService accountService) : ControllerBase
 
     [HttpPut("{id:int}")]
     [Authorize(Roles = "Admin")]
-    [ProducesResponseType(typeof(Account), StatusCodes.Status200OK)]
+    [ProducesResponseType(typeof(AccountBase), StatusCodes.Status200OK)]
     [ProducesResponseType(StatusCodes.Status401Unauthorized)]
     [ProducesResponseType(StatusCodes.Status403Forbidden)]
     [ProducesResponseType(StatusCodes.Status400BadRequest)]
@@ -92,7 +92,7 @@ public class AccountsController(IAccountService accountService) : ControllerBase
 
     [HttpPut("profile")]
     [Authorize]
-    [ProducesResponseType(typeof(Account), StatusCodes.Status200OK)]
+    [ProducesResponseType(typeof(AccountBase), StatusCodes.Status200OK)]
     [ProducesResponseType(StatusCodes.Status401Unauthorized)]
     [ProducesResponseType(StatusCodes.Status403Forbidden)]
     [ProducesResponseType(StatusCodes.Status400BadRequest)]
